--- a/public/page-3.html
+++ b/public/page-3.html
@@ -10,7 +10,7 @@
     <link href="img/favicon.png" rel="icon" type="image/x-icon" />
     <meta name="google-site-verification" content="ZD4OObUOclRm4XtYkeZdkqzODnVCWZuJO2Zf2NpmewE" />
 
-    <title>Isobar</title>
+    <title>Template</title>
 
     <!-- Plugins-->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css" rel="stylesheet">
