Fixed HTTPS links

--- a/public/index.html
+++ b/public/index.html
@@ -436,7 +436,7 @@
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
-    <script src="http://idangero.us/swiper/dist/js/swiper.min.js"></script>
+    <script src="https://idangero.us/swiper/dist/js/swiper.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.3/dist/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/js/swiper.jquery.min.js"></script>
 
