--- a/public/page-4.html
+++ b/public/page-4.html
@@ -2,64 +2,39 @@
 <html lang="en">
 
   <head>
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, initial-scale=1, viewport-fit=cover">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link href="img/favicon.png" rel="icon" type="image/x-icon" />
-    <meta name="google-site-verification" content="ZD4OObUOclRm4XtYkeZdkqzODnVCWZuJO2Zf2NpmewE" />
-
-    <title>Template</title>
-
-    <!-- Plugins-->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <link href='https://idangero.us/swiper/dist/css/swiper.min.css' rel='stylesheet'>
-    <link href="https://unpkg.com/aos@2.3.3/dist/aos.css" rel="stylesheet">
-
-
-    <!-- Custom styles for this template -->
     <link href="css/main.min.css" rel="stylesheet">
-
-    <script>
-      // Picture element HTML5 shiv https://scottjehl.github.io/picturefill/
-      document.createElement( "picture" );
-    </script>
-    <script src="picturefill.js" async></script>
-
   </head>
 
 <body id="page-top">
 
-  
-  <div :class="{'bg-blue p-6': !scrolled, 'bg-black px-6 py-3': scrolled}" class="fixed pin-t w-full z-100 trans"  id="app">
-      <nav class="flex items-center justify-between flex-wrap">
-        <div class="flex items-center flex-no-shrink text-white mr-6">
-          <a class="text-white no-underline" href="\">
-              <span class="font-semibold text-xl tracking-tight">Tailwind CSS</span>
+  <div :class="{'bg-blue p-6': !scrolled, 'bg-black px-6 py-3': scrolled}" class="v-cloak fixed pin-t w-full z-100 trans"  id="app">
+    <nav class="flex items-center justify-between flex-wrap">
+      <div class="flex items-center flex-no-shrink text-white mr-6">
+        <a class="text-white no-underline" href="\">
+            <span class="font-semibold text-xl tracking-tight">Tailwind CSS</span>
+        </a>
+      </div>
+      <div class="block sm:hidden">
+        <button @click="toggle" class="flex items-center px-3 py-2 border rounded text-teal-lighter border-teal-light hover:text-white hover:border-white">
+          <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Menu</title><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/></svg>
+        </button>
+      </div>
+      <div :class="open ? 'block': 'hidden'" class="w-full flex-grow sm:flex sm:items-center sm:w-auto">
+        <div id="nav-links" class="text-sm sm:flex-grow">
+          <a v-for="item in items" :href="item.url" class="v-cloak load no-underline block mt-4 sm:inline-block sm:mt-0 text-teal-lighter hover:text-white mr-4">
+              {{ item.message }}
           </a>
         </div>
-        <div class="block sm:hidden">
-          <button @click="toggle" class="flex items-center px-3 py-2 border rounded text-teal-lighter border-teal-light hover:text-white hover:border-white">
-            <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Menu</title><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/></svg>
-          </button>
+        <div>
+          <a href="#" class="no-underline inline-block text-sm px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-teal hover:bg-white mt-4 sm:mt-0">Download</a>
         </div>
-        <div :class="open ? 'block': 'hidden'" class="w-full flex-grow sm:flex sm:items-center sm:w-auto">
-          <div id="nav-links" class="text-sm sm:flex-grow">
-            <a v-for="item in items" :href="item.url" class="no-underline block mt-4 sm:inline-block sm:mt-0 text-teal-lighter hover:text-white mr-4">
-                {{ item.message }}
-            </a>
-          </div>
-          <div>
-            <a href="#" class="no-underline inline-block text-sm px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-teal hover:bg-white mt-4 sm:mt-0">Download</a>
-          </div>
-        </div>
-      </nav>
-    </div>
+      </div>
+    </nav>
+  </div>
 
 
-        <section class="mt-20">
+        <section class="mt-20 h-screen">
             <h2 class="leading-tight text-center text-black py-8">
               <small class="block uppercase tracking-wide text-grey-dark text-sm leading-loose">Features</small>
               This is a vue feed with google docs.
@@ -75,6 +50,7 @@
                              </div>
                       </div>
                     </div>
+                </div>
                 </div>
           </section>
 
@@ -94,7 +70,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.21/dist/vue.js"></script>
     <script src="vue/app.js"></script>
-  
+
   
 
   </body>
