--- a/public/page-2.html
+++ b/public/page-2.html
@@ -33,7 +33,7 @@
     </nav>
   </div>
 
-      <header class="text-white">
+      <header class="text-white load">
             <div class="swiper-overlay-text absolute flex-grow flex flex-col justify-center pin z-10">
                 <div class="text-center">
                     <h3 class="">Tailwind CSS.</h3>
