fix page 2 slider. Update Json.

--- a/public/page-2.html
+++ b/public/page-2.html
@@ -42,6 +42,7 @@
                     </p>
                 </div>
             </div>
+            </header>
 
           <!-- Swiper -->
           <div class="swiper-container-hero">
