Update read me, Update nav , update swiper

--- a/public/__footer.html
+++ b/public/__footer.html
@@ -1,8 +1,8 @@
-<footer class="bg-purple-darkest p-8 text-grey text-xs md:flex md:flex-wrap">
+<footer class="bg-grey-darkest p-8 text-grey text-xs md:flex md:flex-wrap">
   <div class="container mx-auto max-w-lg md:flex md:flex-wrap lg:max-w-xl">
     <section class="mt-4 md:w-1/4 md:mt-8">
       <p>
-        &copy; Copyright 2018 Aheenam.
+        &copy; Copyright
       </p>
       <p class="mt-4">
         <a href="#" class="no-underline text-white inline-block mr-2">
@@ -17,7 +17,7 @@
             <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z" />
           </svg>
         </a>
-        <a href="#" class="no-underline text-white inline-block m-2">
+        <a href="#" class="no-underline text-grey inline-block m-2">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 24 24"
