--- a/public/__head.html
+++ b/public/__head.html
@@ -10,7 +10,6 @@
 
     <!-- Plugins-->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <link href='https://idangero.us/swiper/dist/css/swiper.min.css' rel='stylesheet'>
     <link href="https://unpkg.com/aos@2.3.3/dist/aos.css" rel="stylesheet">
 
 
@@ -20,7 +19,7 @@
       // Picture element HTML5 shiv https://scottjehl.github.io/picturefill/
       document.createElement( "picture" );
     </script>
-    <script src="picturefill.js" async></script>
+    <script src="https://cdn.rawgit.com/scottjehl/picturefill/3.0.2/dist/picturefill.js" async></script>
 
     
 
