cont, fixing file imports

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link href="https://unpkg.com/aos@2.3.3/dist/aos.css" rel="stylesheet">
     
     <link href="css/main.min.css" rel="stylesheet">
-    
+
     <script>
       // Picture element HTML5 shiv https://scottjehl.github.io/picturefill/
       document.createElement( "picture" );
@@ -298,6 +298,8 @@
     <script src="js/swiper.min.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.21/dist/vue.js"></script>
+
+    <script>AOS.init();</script>
   </body>
 
 </html>
