--- a/public/page-2.html
+++ b/public/page-2.html
@@ -89,16 +89,16 @@
               <div class="swiper-button-prev"></div>
           </div>
 
-              
-        </header>
 
 
 
-        <section class="p-8 bg-grey-lightest">
-            <h2 class="leading-tight text-center text-black py-8">
+        <section class="py-8 bg-grey-lightest">
+
+            <h2 class="leading-tight text-center text-black pb-8">
               <small class="block uppercase tracking-wide text-grey-dark text-sm leading-loose">Features</small>
               Hide on small and show swiper.
             </h2>
+
             <div class="container mx-auto px-2">
                 <!-- Swiper -->
                 <div class="swiper-container">
