--- a/public/page-2.html
+++ b/public/page-2.html
@@ -18,7 +18,7 @@
 
   </head>
 
-<body id="page-top">
+<body id="page-top"> <div id="preloader"></div>
 
     <div id="nav" :class="{'bg-grey-darker p-6': !scrolled, 'bg-black px-6 py-3': scrolled}" 
     class="v-cloak fixed pin-t w-full z-100 trans text-center">
@@ -92,7 +92,7 @@
 
 
 
-        <section class="py-8 bg-grey-lightest">
+        <section class="load py-8 bg-grey-lightest">
 
             <h2 class="leading-tight text-center text-black pb-8">
               <small class="block uppercase tracking-wide text-grey-dark text-sm leading-loose">Features</small>
@@ -164,6 +164,8 @@
         </div>
     </div>
 
+
+    
 
     <!-- Plugin JavaScript -->
         <script src="https://idangero.us/swiper/dist/js/swiper.min.js"></script>
